# cleat

./: .gitignore  CLAUDE.md  LICENSE  NOTES-FOR-BLOG.md  PLAN-wait-for.md  PLAN.md  README.md  client_test.py  pyproject.toml
.claude/agents/: expert-blog-writer.md
.github/workflows/: ci.yml
blog-drafts/: cleat-post.md  cleat-v0.2-session-state.md
src/cleat/: __init__.py  engine.py  filewatch.py  inject.py  microterm.py  server.py  structure.py
tests/: test_engine.py  test_filewatch.py  test_inject.py  test_mcp.py  test_structure.py
